# idp

./: .gitignore  Caddyfile  Cargo.toml  README.md  biome.json  bun.lockb  config.example.toml  docker-compose.yml  justfile  package.json  taplo.toml
apps/frontend/: package.json  svelte.config.js
apps/frontend/src/routes/: +error.svelte
apps/frontend/src/routes/test/: +page.svelte
crates/idp-config/: Cargo.toml
crates/idp-config/src/: cache.rs  database.rs  error.rs  lib.rs  server.rs
crates/idp-extractors/: Cargo.toml
crates/idp-extractors/src/: lib.rs
crates/idp-helpers/: Cargo.toml
crates/idp-helpers/src/: error.rs  json.rs  lib.rs
crates/idp-migration/: Cargo.toml
crates/idp-migration/src/: lib.rs  main.rs  users.rs
crates/idp-models/: Cargo.toml
crates/idp-models/src/user/: builder.rs  mod.rs
crates/idp-models/src/user/db/: active_model.rs  column.rs  mod.rs  model.rs  primary_key.rs  relation.rs
crates/idp-server/: Cargo.toml
crates/idp-server/src/: auth.rs  error.rs  main.rs
crates/idp-server/src/routes/: index.rs  mod.rs
crates/idp-state/: Cargo.toml
crates/idp-state/src/: cache.rs  database.rs  error.rs  lib.rs
