[workspace]
resolver = "2"
members = [
    "crates/idp-config",
    "crates/idp-migration",
    "crates/idp-models",
    "crates/idp-server",
    "crates/idp-state",
]
default-members = ["crates/idp-server"]

[workspace.dependencies]
sea-orm = { version = "1.0.1", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
fred = { version = "9.1.2", features = ["enable-rustls"] }
serde = { version = "1.0.209", features = ["derive"] }
url = { version = "2.5.2", features = ["serde"] }
thiserror = "1.0.63"

[profile.release]
debug     = false
lto       = true
strip     = true
opt-level = 3
# codegen-units = 1 # idk if this actually speeds up the build
