[workspace]
resolver        = "2"
members         = ["crates/idp-*"]
default-members = ["crates/idp-server"]

[workspace.dependencies]
sea-orm = { version = "1.0", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
fred = { version = "9.2", features = ["enable-rustls"] }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.5.2", features = ["serde"] }
thiserror = "1.0"

[profile.release]
debug     = false
lto       = true
strip     = true
opt-level = 3
# codegen-units = 1 # idk if this actually speeds up the build
